...
        style="@style/AppTheme.Base.H5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/settings_title"
        app:layout_constraintEnd_toStartOf="@+id/btSaveSettings"
        app:layout_constraintStart_toEndOf="@+id/btCancel"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSaveSettings"
        style="@style/Widget.MaterialComponents.Button.TextButton"
...
